welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:27: error: ')' expected but ';' found.
	setCouleurBrosse(T((k+p)%(getWorldHeight()-1));
                                                      ^